feat: updates swagger
